--- a/application7/src/client/www/pages/pastposition.html
+++ b/application7/src/client/www/pages/pastposition.html
@@ -2,8 +2,12 @@
 <div class="page" data-name="pastposition">
   <!-- Appbar -->
   <div class="appbar">
-    <div class="appbar-inner">
-      Mon historique
+    <div class="left">
+      <a class="button" href="/home">
+        <i class="icon icon-back"></i>
+        Friends
+        <span class="if-not-md">Back</span>
+      </a>
     </div>
   </div>
   <!-- Scrollable page content-->
