--- a/application7/src/client/www/pages/sentRequest.html
+++ b/application7/src/client/www/pages/sentRequest.html
@@ -1,60 +1,34 @@
 <template>
 <div class="page" data-name="home">
-  <div class="appbar">
-    <div class="appbar-inner">
+  <div class="navbar">
+    <div class="navbar-bg"></div>
+    <div class="navbar-inner">
       <div class="left">
-        <a href="#" class="link icon-only panel-open" data-panel="left">
-          <i class="icon f7-icons if-not-md">menu</i>
-          <i class="icon material-icons if-md">menu</i>
+        <a href="#" class="button" @click ='previouspage'>
+          <i class="icon icon-back"></i>
+         
+          <span class="if-not-md">Back</span>
         </a>
       </div>
+
+    
     </div>
   </div>
-
-  <div class="block-title">Feedbacks of sent requests</div>
+  <div class="page-content">
   <div class="list">
     <ul>
       {{#each friends}}
-        {{#js_if "this.status ===  'accepted'"}}
-      <li class="swipeout">
-        <div class="item-content swipeout-content">
-          <div class="item-inner">
-            <div class="item-title">{{pseudo}} accepted your invitation</div>
-          </div>
+      {{#js_if "this.status ===  'pending'"}}
+      <li>
+        <div class="row"> 
+        {{pseudo}}
+         <a class="button convert-form-to-data" href ='#' @click="delete('{{id}}')"> Cancel invitation </a>
         </div>
-        <div class="swipeout-actions-left">
-          <a href="#" class="swipeout-delete">Delete</a>
-        </div>
-        {{else}}
-          {{#js_if "this.status ===  'refused'"}}
-          <li class="swipeout">
-            <div class="item-content swipeout-content">
-              <div class="item-inner">
-                <div class="item-title">{{pseudo}} refused your invitation</div>
-              </div>
-            </div>
-            <div class="swipeout-actions-left">
-              <a href="#" class="swipeout-delete">Delete</a>
-            </div>
-          </li>
-          {{/js_if}}
+        </li>
          {{/js_if}}
       {{/each}}
     </ul>
   </div>
-
-  <div class="block-title">Sent requests</div>
-  <div class="list links-list">
-    <ul>
-      {{#each friends}}
-       {{#js_if "this.status ===  'pending'"}}
-        <a href="#"><li> {{pseudo}}</li></a>
-          <div class="block block-strong row">
-            <div class="col"><a class="button convert-form-to-data" href ='#' @click="delete('{{id}}')"> Cancel invitation </a></div>
-          </div>
-        {{/js_if}}
-      {{/each}}
-    </ul>
   </div>
 
 </div>
@@ -85,7 +59,10 @@ return{
         app.dialog.alert('Canceled invitation !')
         this.$router.navigate('/home');
       });
-    }
+    },
+    previouspage:function(){
+      this.$router.navigate('/friendlist');
+    },
   }
 }
 </script>
