dynmap  - fixed a bug invalidating change of update operation on db (only lastmodified field was affected)  - DYNMAP.     => friends position are put on a map, these can be selected     => under the map the liste of this position     => selecting a position on the map selects it on the list and reciproquely     => once selected, this position's description message is shown and taphold adds the coordinates to clipboard

--- a/application7/src/client/www/pages/formPosition.html
+++ b/application7/src/client/www/pages/formPosition.html
@@ -20,7 +20,7 @@
                 <div class="item-inner">
                   <div class="item-title item-label">Latitude</div>
                   <div class="item-input-wrap">
-                    <input type="text" name="latitude" id="latitude" placeholder="Your latitude">
+                    <input type="text" name="latitude" id="latitude" placeholder="Your latitude" max=90 min=-90>
                   </div>
                 </div>
               </div>
@@ -31,7 +31,7 @@
                 <div class="item-inner">
                   <div class="item-title item-label">Longitude</div>
                   <div class="item-input-wrap">
-                    <input type="text" name="longitude" id="longitude" placeholder="Your longitude">
+                    <input type="text" name="longitude" id="longitude" placeholder="Your longitude" max=90 min=-90>
                   </div>
                 </div>
               </div>
@@ -65,7 +65,7 @@
                 <div class="item-inner">
                   <div class="item-title item-label">Optional message</div>
                   <div class="item-input-wrap">
-                    <input type="text" name="msg" id="msg" placeholder="Optional message">
+                    <input type="text" name="msg" id="msg" placeholder="Optional message" maxlength=140>
                   </div>
                 </div>
               </div>
