--- a/application7/src/client/www/pages/register.html
+++ b/application7/src/client/www/pages/register.html
@@ -1,6 +1,8 @@
 <template>
   <div class="page" data-name="home">
-    <div class="appbar">
+    <div class="navbar">
+      <div class="navbar-bg"></div>
+      <div class="navbar-inner">
       <div class="left">
         <a href="#" class="link back">
           <i class="icon icon-back"></i>
@@ -8,10 +10,11 @@
           <span class="if-not-md">Back</span>
         </a>
       </div>
+      <div class="title"> Sign up</div>
+      </div>
     </div>
 
     <div class="page-content">
-      <div class="block-title">Formulaire</div>
         <form class="list" id="my-form">
           <ul>
             <li>
