--- a/application7/src/client/www/index.html
+++ b/application7/src/client/www/index.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-  <div id="app"class="theme-color">
+  <div id="app" class="theme-color">
     <!-- Your main view, should have "view-main" class -->
 
     <div class="view view-main view-init safe-areas"></div>
@@ -42,7 +42,9 @@
   <!-- App scripts -->
   <script src="js/app.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaGbAuOo90Q9JnV4aHruXPNqjxH5Kcnzs"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8I_gFl7Z3qwkt-efmDifvNc47xzAqZwY"></script>
+  <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
+
   <!-- <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script> -->
   <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaGbAuOo90Q9JnV4aHruXPNqjxH5Kcnzs&callback=initMap"></script> -->
 </body>
