Fixed phone related problems more flexible form fields (because phones add spaces and maj automaticly) visual bug that couldn't be seen on browser

--- a/application7/src/client/www/pages/pastposition.html
+++ b/application7/src/client/www/pages/pastposition.html
@@ -34,7 +34,7 @@
         </div>
         </a>
         <div class="swipeout-actions-right">
-          <a href="#" class="swipeout-delete" data-confirm="Deactivate current position ?" >Deactivate</a>
+          <a href="#" class="swipeout-delete swipeout-overswipe" data-confirm="Deactivate current position ?" >Deactivate</a>
           <a class="color-green alert-reply sheet-open" href="#" data-sheet=".my-sheet" @click="openmap('{{latitude}}','{{longitude}}')">On map</a>
         </div>
         </div>
@@ -62,7 +62,7 @@
         </div>
         </a>
         <div class="swipeout-actions-right">
-          <a href="#" class="swipeout-delete" data-confirm="Are you sure you want to delete this position?" >Delete</a>
+          <a href="#" class="swipeout-delete swipeout-overswipe" data-confirm="Are you sure you want to delete this position?" >Delete</a>
           <a class="color-green alert-reply sheet-open" href="#" data-sheet=".my-sheet" @click="openmap('{{latitude}}','{{longitude}}')">On map</a>
         </div>
         </div>
@@ -91,7 +91,7 @@
             </div>
 
             <div class="swipeout-actions-right">
-              <a href="#" class="swipeout-delete" data-confirm="Are you sure you want to delete this position?" >Delete</a>
+              <a href="#" class="swipeout-delete swipeout-overswipe" data-confirm="Are you sure you want to delete this position?" >Delete</a>
               <a class="color-green alert-reply sheet-open" href="#" data-sheet=".my-sheet" @click="openmap('{{latitude}}','{{longitude}}')">On map</a>
               
             </div>
