--- a/application7/src/client/www/pages/home.html
+++ b/application7/src/client/www/pages/home.html
@@ -339,7 +339,7 @@
         });
 
      
-        var markerCluster = new MarkerClusterer(this.map, clusterMarker)
+        var markerCluster = new MarkerClusterer(this.map, clusterMarker,{imagePath: 'https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m'})
 
 
       }
